force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Mass_Assign_Resources_Load_Limit__c.field-meta.xml
<CustomField>
    <fullName>pse__Mass_Assign_Resources_Load_Limit__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Controls how many resources are returned in the results when searching on the Mass Assign Resources To Project page. Values higher than 2000 are not recommended due to risk of exceeding platform view state. Default value is 1000.</description>
    <inlineHelpText>Controls how many resources are returned in the results when searching on the Mass Assign Resources To Project page. Values higher than 2000 are not recommended due to risk of exceeding platform view state. Default value is 1000.</inlineHelpText>
    <label>Mass Assign Resources Load Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>