force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Update_Project_Monitor_Fields_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Update_Project_Monitor_Fields_Batch_Size__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>Update Project Monitor Fields Batch Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>